Speed up AI turns and reduce memory and save game sizes. (#10442)
* Speed up AI turns and reduce memory and save game sizes.

Speed up AI turns and reduce memory and save game sizes, by not instantiating empty collections for many different properties of attachments.

Standardize handling with helpers for getters, which return unmodifiable views of the underlying collections. Introduce an unmodifiable empty IntegerMap and the ability to return an unmodifiable view of an IntegerMap, for consistency with other collection methods.

Annotate null fields with `@Nullable` which lets IDEs help identify warnings when used without null checks directly.s.