@@ -8,22 +8,25 @@ import games.strategy.engine.data.GameMap;
 import games.strategy.engine.data.GamePlayer;
 import games.strategy.engine.data.GameState;
 import games.strategy.engine.data.MutableProperty;
-import games.strategy.engine.data.PlayerList;
 import games.strategy.engine.data.Territory;
 import games.strategy.engine.data.gameparser.GameParseException;
 import games.strategy.triplea.delegate.Matches;
 import games.strategy.triplea.delegate.OriginalOwnerTracker;
-import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import javax.annotation.Nullable;
 import org.triplea.java.RenameOnNextMajorRelease;
 import org.triplea.java.collections.CollectionUtils;
 
-/** The Purpose of this class is to hold shared and simple methods used by RulesAttachment. */
+/**
+ * The Purpose of this class is to hold shared and simple methods used by RulesAttachment. Note:
+ * Empty collection fields default to null to minimize memory use and serialization size.
+ */
 public abstract class AbstractRulesAttachment extends AbstractConditionsAttachment {
   private static final long serialVersionUID = -6977650137928964759L;
 
@@ -33,17 +36,17 @@ public abstract class AbstractRulesAttachment extends AbstractConditionsAttachme
   // directPresenceTerritories, or any of the other territory lists
   // only used if the attachment begins with "objectiveAttachment"
   // Note: Subclasses should use getPlayers() which take into account getAttachedTo().
-  private List<GamePlayer> players = new ArrayList<>();
+  private @Nullable List<GamePlayer> players = null;
   protected int objectiveValue = 0;
   // only matters for objectiveValue, does not affect the condition
   protected int uses = -1;
   // condition for what turn it is
   @RenameOnNextMajorRelease(newName = "rounds")
-  protected Map<Integer, Integer> turns = null;
+  protected @Nullable Map<Integer, Integer> turns = null;
   // for on/off conditions
   protected boolean switched = true;
   // allows custom GameProperties
-  protected String gameProperty = null;
+  protected @Nullable String gameProperty = null;
   // Determines if we will be counting each for the purposes of objectiveValue
   private boolean countEach = false;
   // Used with the next Territory conditions to determine the number of territories needed to be
@@ -56,14 +59,7 @@ public abstract class AbstractRulesAttachment extends AbstractConditionsAttachme
   }
 
   private void setPlayers(final String names) throws GameParseException {
-    final PlayerList pl = getData().getPlayerList();
-    for (final String p : splitOnColon(names)) {
-      final GamePlayer player = pl.getPlayerId(p);
-      if (player == null) {
-        throw new GameParseException("Could not find player. name:" + p + thisErrorMsg());
-      }
-      players.add(player);
-    }
+    players = parsePlayerList(names, players);
   }
 
   private void setPlayers(final List<GamePlayer> value) {
@@ -71,11 +67,13 @@ public abstract class AbstractRulesAttachment extends AbstractConditionsAttachme
   }
 
   protected List<GamePlayer> getPlayers() {
-    return players.isEmpty() ? new ArrayList<>(List.of((GamePlayer) getAttachedTo())) : players;
+    return players == null
+        ? List.of((GamePlayer) getAttachedTo())
+        : Collections.unmodifiableList(players);
   }
 
   private void resetPlayers() {
-    players = new ArrayList<>();
+    players = null;
   }
 
   @Override
@@ -166,7 +164,7 @@ public abstract class AbstractRulesAttachment extends AbstractConditionsAttachme
     gameProperty = value;
   }
 
-  private String getGameProperty() {
+  private @Nullable String getGameProperty() {
     return gameProperty;
   }
 
@@ -179,10 +177,6 @@ public abstract class AbstractRulesAttachment extends AbstractConditionsAttachme
   }
 
   private void setRounds(final String rounds) throws GameParseException {
-    if (rounds == null) {
-      turns = null;
-      return;
-    }
     turns = new HashMap<>();
     final String[] s = splitOnColon(rounds);
     if (s.length < 1) {
@@ -217,17 +211,17 @@ public abstract class AbstractRulesAttachment extends AbstractConditionsAttachme
 
   @VisibleForTesting
   public Map<Integer, Integer> getRounds() {
-    return turns;
+    return getMapProperty(turns);
   }
 
   private void resetRounds() {
     turns = null;
   }
 
-  protected boolean checkTurns(final GameState data) {
+  protected boolean checkRounds(final GameState data) {
     final int turn = data.getSequence().getRound();
-    for (final int t : turns.keySet()) {
-      if (turn >= t && turn <= turns.get(t)) {
+    for (final Map.Entry<Integer, Integer> entry : getRounds().entrySet()) {
+      if (turn >= entry.getKey() && turn <= entry.getValue()) {
         return true;
       }
     }
