@@ -39,6 +39,7 @@ import games.strategy.triplea.formatter.MyFormatter;
 import games.strategy.triplea.ui.NotificationMessages;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -52,6 +53,7 @@ import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 import lombok.extern.slf4j.Slf4j;
 import org.triplea.java.ObjectUtils;
 import org.triplea.java.PredicateBuilder;
@@ -62,7 +64,8 @@ import org.triplea.util.Tuple;
 
 /**
  * An attachment for instances of {@link GamePlayer} that defines actions to be triggered upon
- * various events.
+ * various events. Note: Empty collection fields default to null to minimize memory use and
+ * serialization size.
  */
 @Slf4j
 public class TriggerAttachment extends AbstractTriggerAttachment {
@@ -87,45 +90,45 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   // Matches prefixes of "-clear-" and "-reset-". Non-capture-group.
   private static final Pattern clearFirstNewValueRegex = Pattern.compile("^-(:?clear|reset)-");
 
-  private ProductionFrontier frontier = null;
-  private List<String> productionRule = null;
-  private List<TechAdvance> tech = new ArrayList<>();
-  private Map<String, Map<TechAdvance, Boolean>> availableTech = null;
-  private Map<Territory, IntegerMap<UnitType>> placement = null;
-  private Map<Territory, IntegerMap<UnitType>> removeUnits = null;
-  private IntegerMap<UnitType> purchase = null;
-  private String resource = null;
+  private @Nullable ProductionFrontier frontier = null;
+  private @Nullable List<String> productionRule = null;
+  private @Nullable List<TechAdvance> tech = null;
+  private @Nullable Map<String, Map<TechAdvance, Boolean>> availableTech = null;
+  private @Nullable Map<Territory, IntegerMap<UnitType>> placement = null;
+  private @Nullable Map<Territory, IntegerMap<UnitType>> removeUnits = null;
+  private @Nullable IntegerMap<UnitType> purchase = null;
+  private @Nullable String resource = null;
   private int resourceCount = 0;
   // never use a map of other attachments, inside of an attachment. java will not be able to
   // deserialize it.
-  private Map<String, Boolean> support = null;
+  private @Nullable Map<String, Boolean> support = null;
   // List of relationshipChanges that should be executed when this trigger hits.
-  private List<String> relationshipChange = new ArrayList<>();
-  private String victory = null;
-  private List<Tuple<String, String>> activateTrigger = new ArrayList<>();
-  private List<String> changeOwnership = new ArrayList<>();
+  private @Nullable List<String> relationshipChange = null;
+  private @Nullable String victory = null;
+  private @Nullable List<Tuple<String, String>> activateTrigger = null;
+  private @Nullable List<String> changeOwnership = null;
   // raw property changes below:
-  private List<UnitType> unitTypes = new ArrayList<>();
-  private Tuple<String, String> unitAttachmentName =
-      null; // covers UnitAttachment, UnitSupportAttachment
-  private List<Tuple<String, String>> unitProperty = null;
-  private List<Territory> territories = new ArrayList<>();
-  private Tuple<String, String> territoryAttachmentName =
-      null; // covers TerritoryAttachment, CanalAttachment
-  private List<Tuple<String, String>> territoryProperty = null;
-  private List<GamePlayer> players = new ArrayList<>();
+  private @Nullable List<UnitType> unitTypes = null;
+  // covers UnitAttachment, UnitSupportAttachment
+  private @Nullable Tuple<String, String> unitAttachmentName = null;
+  private @Nullable List<Tuple<String, String>> unitProperty = null;
+  private @Nullable List<Territory> territories = null;
+  // covers TerritoryAttachment, CanalAttachment
+  private @Nullable Tuple<String, String> territoryAttachmentName = null;
+  private @Nullable List<Tuple<String, String>> territoryProperty = null;
+  private @Nullable List<GamePlayer> players = null;
   // covers PlayerAttachment, TriggerAttachment, RulesAttachment, TechAttachment,
   // UserActionAttachment
-  private Tuple<String, String> playerAttachmentName = null;
-  private List<Tuple<String, String>> playerProperty = null;
-  private List<RelationshipType> relationshipTypes = new ArrayList<>();
-  private Tuple<String, String> relationshipTypeAttachmentName =
-      null; // covers RelationshipTypeAttachment
-  private List<Tuple<String, String>> relationshipTypeProperty = null;
-  private List<TerritoryEffect> territoryEffects = new ArrayList<>();
-  private Tuple<String, String> territoryEffectAttachmentName =
-      null; // covers TerritoryEffectAttachment
-  private List<Tuple<String, String>> territoryEffectProperty = null;
+  private @Nullable Tuple<String, String> playerAttachmentName = null;
+  private @Nullable List<Tuple<String, String>> playerProperty = null;
+  private @Nullable List<RelationshipType> relationshipTypes = null;
+  // covers RelationshipTypeAttachment
+  private @Nullable Tuple<String, String> relationshipTypeAttachmentName = null;
+  private @Nullable List<Tuple<String, String>> relationshipTypeProperty = null;
+  private @Nullable List<TerritoryEffect> territoryEffects = null;
+  // covers TerritoryEffectAttachment
+  private @Nullable Tuple<String, String> territoryEffectAttachmentName = null;
+  private @Nullable List<Tuple<String, String>> territoryEffectProperty = null;
 
   public TriggerAttachment(
       final String name, final Attachable attachable, final GameData gameData) {
@@ -376,6 +379,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
     getBool(s[3]);
     getBool(s[4]);
     getBool(s[5]);
+    if (activateTrigger == null) {
+      activateTrigger = new ArrayList<>();
+    }
     activateTrigger.add(Tuple.of(s[0], options));
   }
 
@@ -384,18 +390,14 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getActivateTrigger() {
-    return activateTrigger;
+    return getListProperty(activateTrigger);
   }
 
   private void resetActivateTrigger() {
-    activateTrigger = new ArrayList<>();
+    activateTrigger = null;
   }
 
   private void setFrontier(final String s) throws GameParseException {
-    if (s == null) {
-      frontier = null;
-      return;
-    }
     final ProductionFrontier front = getData().getProductionFrontierList().getProductionFrontier(s);
     if (front == null) {
       throw new GameParseException("Could not find frontier. name:" + s + thisErrorMsg());
@@ -407,7 +409,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
     frontier = value;
   }
 
-  private ProductionFrontier getFrontier() {
+  private @Nullable ProductionFrontier getFrontier() {
     return frontier;
   }
 
@@ -416,16 +418,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private void setProductionRule(final String prop) throws GameParseException {
-    if (prop == null) {
-      productionRule = null;
-      return;
-    }
     final String[] s = splitOnColon(prop);
     if (s.length != 2) {
       throw new GameParseException("Invalid productionRule declaration: " + prop + thisErrorMsg());
-    }
-    if (productionRule == null) {
-      productionRule = new ArrayList<>();
     }
     if (getData().getProductionFrontierList().getProductionFrontier(s[0]) == null) {
       throw new GameParseException("Could not find frontier. name:" + s[0] + thisErrorMsg());
@@ -437,6 +432,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
     if (getData().getProductionRuleList().getProductionRule(rule) == null) {
       throw new GameParseException("Could not find production rule. name:" + rule + thisErrorMsg());
     }
+    if (productionRule == null) {
+      productionRule = new ArrayList<>();
+    }
     productionRule.add(prop);
   }
 
@@ -445,7 +443,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   List<String> getProductionRule() {
-    return productionRule;
+    return getListProperty(productionRule);
   }
 
   private void resetProductionRule() {
@@ -469,14 +467,10 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private void setVictory(final String s) {
-    if (s == null) {
-      victory = null;
-      return;
-    }
     victory = s;
   }
 
-  private String getVictory() {
+  private @Nullable String getVictory() {
     return victory;
   }
 
@@ -493,6 +487,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
       if (ta == null) {
         throw new GameParseException("Technology not found :" + subString + thisErrorMsg());
       }
+      if (tech == null) {
+        tech = new ArrayList<>();
+      }
       tech.add(ta);
     }
   }
@@ -502,18 +499,14 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<TechAdvance> getTech() {
-    return tech;
+    return getListProperty(tech);
   }
 
   private void resetTech() {
-    tech = new ArrayList<>();
+    tech = null;
   }
 
   private void setAvailableTech(final String techs) throws GameParseException {
-    if (techs == null) {
-      availableTech = null;
-      return;
-    }
     final String[] s = splitOnColon(techs);
     if (s.length < 2) {
       throw new GameParseException(
@@ -550,41 +543,28 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private Map<String, Map<TechAdvance, Boolean>> getAvailableTech() {
-    return availableTech;
+    return getMapProperty(availableTech);
   }
 
   private void resetAvailableTech() {
     availableTech = null;
   }
 
-  private void setSupport(final String sup) throws GameParseException {
-    if (sup == null) {
-      support = null;
-      return;
-    }
-    final String[] s = splitOnColon(sup);
-    for (int i = 0; i < s.length; i++) {
-      boolean add = true;
-      if (s[i].startsWith("-")) {
-        add = false;
-        s[i] = s[i].substring(1);
+  private void setSupport(final String value) throws GameParseException {
+    for (final String entry : splitOnColon(value)) {
+      final boolean remove = entry.startsWith("-");
+      final String name = remove ? entry.substring(1) : entry;
+      UnitSupportAttachment.get(getData().getUnitTypeList()).stream()
+          .filter(support -> support.getName().equals(name))
+          .findAny()
+          .orElseThrow(
+              () ->
+                  new GameParseException(
+                      "Could not find unitSupportAttachment. name:" + name + thisErrorMsg()));
+      if (support == null) {
+        support = new LinkedHashMap<>();
       }
-      boolean found = false;
-      for (final UnitSupportAttachment support :
-          UnitSupportAttachment.get(getData().getUnitTypeList())) {
-        if (support.getName().equals(s[i])) {
-          found = true;
-          if (this.support == null) {
-            this.support = new LinkedHashMap<>();
-          }
-          this.support.put(s[i], add);
-          break;
-        }
-      }
-      if (!found) {
-        throw new GameParseException(
-            "Could not find unitSupportAttachment. name:" + s[i] + thisErrorMsg());
-      }
+      support.put(name, !remove);
     }
   }
 
@@ -593,7 +573,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private Map<String, Boolean> getSupport() {
-    return support;
+    return getMapProperty(support);
   }
 
   private void resetSupport() {
@@ -601,10 +581,6 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private void setResource(final String s) throws GameParseException {
-    if (s == null) {
-      resource = null;
-      return;
-    }
     final Resource r = getData().getResourceList().getResource(s);
     if (r == null) {
       throw new GameParseException("Invalid resource: " + s + thisErrorMsg());
@@ -612,7 +588,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
     resource = s;
   }
 
-  private String getResource() {
+  private @Nullable String getResource() {
     return resource;
   }
 
@@ -629,23 +605,16 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
               + " \n Use: player1:player2:oldRelation:newRelation\n"
               + thisErrorMsg());
     }
-    if (getData().getPlayerList().getPlayerId(s[0]) == null) {
-      throw new GameParseException(
-          "Invalid relationshipChange declaration: "
-              + relChange
-              + " \n player: "
-              + s[0]
-              + " unknown "
-              + thisErrorMsg());
-    }
-    if (getData().getPlayerList().getPlayerId(s[1]) == null) {
-      throw new GameParseException(
-          "Invalid relationshipChange declaration: "
-              + relChange
-              + " \n player: "
-              + s[1]
-              + " unknown "
-              + thisErrorMsg());
+    for (int i = 0; i < 2; i++) {
+      if (getData().getPlayerList().getPlayerId(s[i]) == null) {
+        throw new GameParseException(
+            "Invalid relationshipChange declaration: "
+                + relChange
+                + " \n player: "
+                + s[i]
+                + " unknown "
+                + thisErrorMsg());
+      }
     }
     if (!(s[2].equals(Constants.RELATIONSHIP_CONDITION_ANY_NEUTRAL)
         || s[2].equals(Constants.RELATIONSHIP_CONDITION_ANY)
@@ -669,6 +638,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
               + " unknown "
               + thisErrorMsg());
     }
+    if (relationshipChange == null) {
+      relationshipChange = new ArrayList<>();
+    }
     relationshipChange.add(relChange);
   }
 
@@ -677,21 +649,19 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<String> getRelationshipChange() {
-    return relationshipChange;
+    return getListProperty(relationshipChange);
   }
 
   private void resetRelationshipChange() {
-    relationshipChange = new ArrayList<>();
+    relationshipChange = null;
   }
 
   private void setUnitType(final String names) throws GameParseException {
-    final String[] s = splitOnColon(names);
-    for (final String element : s) {
-      final UnitType type = getData().getUnitTypeList().getUnitType(element);
-      if (type == null) {
-        throw new GameParseException("Could not find unitType. name:" + element + thisErrorMsg());
+    for (final String element : splitOnColon(names)) {
+      if (unitTypes == null) {
+        unitTypes = new ArrayList<>();
       }
-      unitTypes.add(type);
+      unitTypes.add(getUnitTypeOrThrow(element));
     }
   }
 
@@ -700,11 +670,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<UnitType> getUnitType() {
-    return unitTypes;
+    return getListProperty(unitTypes);
   }
 
   private void resetUnitType() {
-    unitTypes = new ArrayList<>();
+    unitTypes = null;
   }
 
   private void setUnitAttachmentName(final String name) throws GameParseException {
@@ -775,7 +745,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getUnitProperty() {
-    return unitProperty;
+    return getListProperty(unitProperty);
   }
 
   private void resetUnitProperty() {
@@ -785,11 +755,10 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   private void setTerritories(final String names) throws GameParseException {
     final String[] s = splitOnColon(names);
     for (final String element : s) {
-      final Territory terr = getData().getMap().getTerritory(element);
-      if (terr == null) {
-        throw new GameParseException("Could not find territory. name:" + element + thisErrorMsg());
+      if (territories == null) {
+        territories = new ArrayList<>();
       }
-      territories.add(terr);
+      territories.add(getTerritoryOrThrow(element));
     }
   }
 
@@ -798,11 +767,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Territory> getTerritories() {
-    return territories;
+    return getListProperty(territories);
   }
 
   private void resetTerritories() {
-    territories = new ArrayList<>();
+    territories = null;
   }
 
   private void setTerritoryAttachmentName(final String name) throws GameParseException {
@@ -873,7 +842,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getTerritoryProperty() {
-    return territoryProperty;
+    return getListProperty(territoryProperty);
   }
 
   private void resetTerritoryProperty() {
@@ -881,14 +850,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private void setPlayers(final String names) throws GameParseException {
-    final String[] s = splitOnColon(names);
-    for (final String element : s) {
-      final GamePlayer player = getData().getPlayerList().getPlayerId(element);
-      if (player == null) {
-        throw new GameParseException("Could not find player. name:" + element + thisErrorMsg());
-      }
-      players.add(player);
-    }
+    players = parsePlayerList(names, players);
   }
 
   private void setPlayers(final List<GamePlayer> value) {
@@ -896,11 +858,13 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<GamePlayer> getPlayers() {
-    return players.isEmpty() ? new ArrayList<>(List.of((GamePlayer) getAttachedTo())) : players;
+    return players == null
+        ? List.of((GamePlayer) getAttachedTo())
+        : Collections.unmodifiableList(players);
   }
 
   private void resetPlayers() {
-    players = new ArrayList<>();
+    players = null;
   }
 
   private void setPlayerAttachmentName(final String playerAttachmentName)
@@ -997,7 +961,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getPlayerProperty() {
-    return playerProperty;
+    return getListProperty(playerProperty);
   }
 
   private void resetPlayerProperty() {
@@ -1005,13 +969,15 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private void setRelationshipTypes(final String names) throws GameParseException {
-    final String[] s = splitOnColon(names);
-    for (final String element : s) {
+    for (final String element : splitOnColon(names)) {
       final RelationshipType relation =
           getData().getRelationshipTypeList().getRelationshipType(element);
       if (relation == null) {
         throw new GameParseException(
             "Could not find relationshipType. name:" + element + thisErrorMsg());
+      }
+      if (relationshipTypes == null) {
+        relationshipTypes = new ArrayList<>();
       }
       relationshipTypes.add(relation);
     }
@@ -1022,11 +988,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<RelationshipType> getRelationshipTypes() {
-    return relationshipTypes;
+    return getListProperty(relationshipTypes);
   }
 
   private void resetRelationshipTypes() {
-    relationshipTypes = new ArrayList<>();
+    relationshipTypes = null;
   }
 
   private void setRelationshipTypeAttachmentName(final String name) throws GameParseException {
@@ -1094,20 +1060,22 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getRelationshipTypeProperty() {
-    return relationshipTypeProperty;
+    return getListProperty(relationshipTypeProperty);
   }
 
   private void resetRelationshipTypeProperty() {
     relationshipTypeProperty = null;
   }
 
-  private void setTerritoryEffects(final String names) throws GameParseException {
-    final String[] s = splitOnColon(names);
-    for (final String element : s) {
-      final TerritoryEffect effect = getData().getTerritoryEffectList().get(element);
+  private void setTerritoryEffects(final String effectNames) throws GameParseException {
+    for (final String name : splitOnColon(effectNames)) {
+      final TerritoryEffect effect = getData().getTerritoryEffectList().get(name);
       if (effect == null) {
         throw new GameParseException(
-            "Could not find territoryEffect. name:" + element + thisErrorMsg());
+            "Could not find territoryEffect. name:" + name + thisErrorMsg());
+      }
+      if (territoryEffects == null) {
+        territoryEffects = new ArrayList<>();
       }
       territoryEffects.add(effect);
     }
@@ -1118,11 +1086,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<TerritoryEffect> getTerritoryEffects() {
-    return territoryEffects;
+    return getListProperty(territoryEffects);
   }
 
   private void resetTerritoryEffects() {
-    territoryEffects = new ArrayList<>();
+    territoryEffects = null;
   }
 
   private void setTerritoryEffectAttachmentName(final String name) throws GameParseException {
@@ -1189,7 +1157,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getTerritoryEffectProperty() {
-    return territoryEffectProperty;
+    return getListProperty(territoryEffectProperty);
   }
 
   private void resetTerritoryEffectProperty() {
@@ -1217,19 +1185,12 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
     if (s.length == 1 && count != -1) {
       throw new GameParseException("Empty placement list" + thisErrorMsg());
     }
-    final Territory territory = getData().getMap().getTerritory(s[i]);
-    if (territory == null) {
-      throw new GameParseException("Territory does not exist " + s[i] + thisErrorMsg());
-    }
+    final Territory territory = getTerritoryOrThrow(s[i]);
 
     i++;
     final IntegerMap<UnitType> map = new IntegerMap<>();
     for (; i < s.length; i++) {
-      final UnitType type = getData().getUnitTypeList().getUnitType(s[i]);
-      if (type == null) {
-        throw new GameParseException("UnitType does not exist " + s[i] + thisErrorMsg());
-      }
-      map.add(type, count);
+      map.add(getUnitTypeOrThrow(s[i]), count);
     }
     if (placement == null) {
       placement = new HashMap<>();
@@ -1245,7 +1206,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private Map<Territory, IntegerMap<UnitType>> getPlacement() {
-    return placement;
+    return getMapProperty(placement);
   }
 
   private void resetPlacement() {
@@ -1253,10 +1214,6 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private void setRemoveUnits(final String value) throws GameParseException {
-    if (value == null) {
-      removeUnits = null;
-      return;
-    }
     if (removeUnits == null) {
       removeUnits = new HashMap<>();
     }
@@ -1317,7 +1274,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private Map<Territory, IntegerMap<UnitType>> getRemoveUnits() {
-    return removeUnits;
+    return getMapProperty(removeUnits);
   }
 
   private void resetRemoveUnits() {
@@ -1349,11 +1306,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
       purchase = new IntegerMap<>();
     }
     for (; i < s.length; i++) {
-      final UnitType type = getData().getUnitTypeList().getUnitType(s[i]);
-      if (type == null) {
-        throw new GameParseException("UnitType does not exist " + s[i] + thisErrorMsg());
-      }
-      purchase.add(type, count);
+      purchase.add(getUnitTypeOrThrow(s[i]), count);
     }
   }
 
@@ -1362,7 +1315,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private IntegerMap<UnitType> getPurchase() {
-    return purchase;
+    return getIntegerMapProperty(purchase);
   }
 
   private void resetPurchase() {
@@ -1379,22 +1332,16 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
               + thisErrorMsg());
     }
     if (!s[0].equalsIgnoreCase("all")) {
-      final Territory t = getData().getMap().getTerritory(s[0]);
-      if (t == null) {
-        throw new GameParseException("No such territory: " + s[0] + thisErrorMsg());
-      }
+      getTerritoryOrThrow(s[0]);
     }
     if (!s[1].equalsIgnoreCase("any")) {
-      final GamePlayer oldOwner = getData().getPlayerList().getPlayerId(s[1]);
-      if (oldOwner == null) {
-        throw new GameParseException("No such player: " + s[1] + thisErrorMsg());
-      }
+      getPlayerOrThrow(s[1]);
     }
-    final GamePlayer newOwner = getData().getPlayerList().getPlayerId(s[2]);
-    if (newOwner == null) {
-      throw new GameParseException("No such player: " + s[2] + thisErrorMsg());
-    }
+    getPlayerOrThrow(s[2]);
     getBool(s[3]);
+    if (changeOwnership == null) {
+      changeOwnership = new ArrayList<>();
+    }
     changeOwnership.add(value);
   }
 
@@ -1403,11 +1350,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<String> getChangeOwnership() {
-    return changeOwnership;
+    return getListProperty(changeOwnership);
   }
 
   private void resetChangeOwnership() {
-    changeOwnership = new ArrayList<>();
+    changeOwnership = null;
   }
 
   private static void removeUnits(
@@ -2184,44 +2131,33 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
         t.use(bridge);
       }
       for (final GamePlayer player : t.getPlayers()) {
-        for (final String usaString : t.getSupport().keySet()) {
+        for (final Map.Entry<String, Boolean> entry : t.getSupport().entrySet()) {
           final UnitSupportAttachment usa =
               UnitSupportAttachment.get(data.getUnitTypeList()).stream()
-                  .filter(s -> s.getName().equals(usaString))
+                  .filter(s -> s.getName().equals(entry.getKey()))
                   .findAny()
-                  .orElse(null);
-          if (usa == null) {
-            throw new IllegalStateException(
-                "Could not find unitSupportAttachment. name:" + usaString);
-          }
+                  .orElseThrow(
+                      () ->
+                          new IllegalStateException(
+                              "Could not find unitSupportAttachment. name:" + entry.getKey()));
           final List<GamePlayer> p = new ArrayList<>(usa.getPlayers());
-          if (p.contains(player)) {
-            if (!t.getSupport().get(usa.getName())) {
-              p.remove(player);
-              change.add(ChangeFactory.attachmentPropertyChange(usa, p, "players"));
-              bridge
-                  .getHistoryWriter()
-                  .startEvent(
-                      MyFormatter.attachmentNameToText(t.getName())
-                          + ": "
-                          + player.getName()
-                          + " is removed from "
-                          + usa);
-            }
-          } else {
-            if (t.getSupport().get(usa.getName())) {
-              p.add(player);
-              change.add(ChangeFactory.attachmentPropertyChange(usa, p, "players"));
-              bridge
-                  .getHistoryWriter()
-                  .startEvent(
-                      MyFormatter.attachmentNameToText(t.getName())
-                          + ": "
-                          + player.getName()
-                          + " is added to "
-                          + usa);
-            }
+          final boolean addPlayer = entry.getValue();
+          if (p.contains(player) == addPlayer) {
+            continue;
           }
+          if (addPlayer) {
+            p.add(player);
+          } else {
+            p.remove(player);
+          }
+          change.add(ChangeFactory.attachmentPropertyChange(usa, p, "players"));
+          final String historyText =
+              MyFormatter.attachmentNameToText(t.getName())
+                  + ": "
+                  + player.getName()
+                  + (addPlayer ? " is added to " : " is removed from ")
+                  + usa;
+          bridge.getHistoryWriter().startEvent(historyText);
         }
       }
     }
@@ -2549,9 +2485,6 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
       if (fireTriggerParams.useUses) {
         t.use(bridge);
       }
-      if (t.getPlayers() == null) {
-        continue;
-      }
       final String victoryMessage = notificationMessages.getMessage(t.getVictory().trim());
       final String sounds = notificationMessages.getSoundsKey(t.getVictory().trim());
       if (victoryMessage != null) {
@@ -2602,7 +2535,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   public static Predicate<TriggerAttachment> prodFrontierEditMatch() {
-    return t -> t.getProductionRule() != null && !t.getProductionRule().isEmpty();
+    return t -> !t.getProductionRule().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> techMatch() {
@@ -2610,19 +2543,19 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   public static Predicate<TriggerAttachment> techAvailableMatch() {
-    return t -> t.getAvailableTech() != null;
+    return t -> !t.getAvailableTech().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> removeUnitsMatch() {
-    return t -> t.getRemoveUnits() != null;
+    return t -> !t.getRemoveUnits().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> placeMatch() {
-    return t -> t.getPlacement() != null;
+    return t -> !t.getPlacement().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> purchaseMatch() {
-    return t -> t.getPurchase() != null;
+    return t -> !t.getPurchase().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> resourceMatch() {
@@ -2630,7 +2563,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   public static Predicate<TriggerAttachment> supportMatch() {
-    return t -> t.getSupport() != null;
+    return t -> !t.getSupport().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> changeOwnershipMatch() {
@@ -2638,23 +2571,23 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   public static Predicate<TriggerAttachment> unitPropertyMatch() {
-    return t -> !t.getUnitType().isEmpty() && t.getUnitProperty() != null;
+    return t -> !t.getUnitType().isEmpty() && !t.getUnitProperty().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> territoryPropertyMatch() {
-    return t -> !t.getTerritories().isEmpty() && t.getTerritoryProperty() != null;
+    return t -> !t.getTerritories().isEmpty() && !t.getTerritoryProperty().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> playerPropertyMatch() {
-    return t -> t.getPlayerProperty() != null;
+    return t -> !t.getPlayerProperty().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> relationshipTypePropertyMatch() {
-    return t -> !t.getRelationshipTypes().isEmpty() && t.getRelationshipTypeProperty() != null;
+    return t -> !t.getRelationshipTypes().isEmpty() && !t.getRelationshipTypeProperty().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> territoryEffectPropertyMatch() {
-    return t -> !t.getTerritoryEffects().isEmpty() && t.getTerritoryEffectProperty() != null;
+    return t -> !t.getTerritoryEffects().isEmpty() && !t.getTerritoryEffectProperty().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> relationshipChangeMatch() {
